client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vllm-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: vllm-client
  template:
    metadata:
      labels:
        app.kubernetes.io/name: vllm-client
    spec:
      containers:
      - name: vllm
        image: public.ecr.aws/q9t5s3a7/vllm-cpu-release-repo:v0.8.3
        command: ["/bin/sh", "-c"]
        args: [
          "sleep inf"
        ]
        securityContext:
          allowPrivilegeEscalation: true
